syntax = "proto3";

package order;

option go_package = "order-service/proto;orderpb";

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
}

message OrderResponse {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  string status = 4;
}

message GetOrderRequest {
  string id = 1;
}

message UpdateOrderStatusRequest {
  string id = 1;
  string status = 2;
}

message ListOrdersRequest {
  string user_id = 1;
}

message ListOrdersResponse {
  repeated OrderResponse orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc GetOrderByID(GetOrderRequest) returns (OrderResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse);
  rpc ListUserOrders(ListOrdersRequest) returns (ListOrdersResponse);
}